force-app/main/default/objects/New_Beat__c/fields/Beat_Description__c.field-meta.xml
<CustomField>
    <fullName>Beat_Description__c</fullName>
    <label>Beat Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>