force-app/main/default/objects/New_Beat__c/fields/Beat_Type__c.field-meta.xml
<CustomField>
    <fullName>Beat_Type__c</fullName>
    <label>Beat Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
            <value>
                <fullName>Ad-hoc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>