force-app/main/default/objects/New_Beat__c/fields/Zonal_Manager__c.field-meta.xml
<CustomField>
    <fullName>Zonal_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zonal Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Beats3</relationshipName>
    <type>Lookup</type>
</CustomField>